🐛 fix: fixing emojis on firefox and safari

--- a/src/css/blocks/emoji.css
+++ b/src/css/blocks/emoji.css
@@ -1,3 +1,5 @@
 .emoji {
-  font-family: "Noto Color Emoji", sans-serif;
+  font-family: "Noto Color Emoji", "Apple Color Emoji", "Twemoji Mozilla",
+    "Segoe UI Emoji", "Segoe UI Symbol", "EmojiOne Color",
+    "Android Emoji" sans-serif;
 }
